# PaperTraderBE

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: Portfolio.cpp  Portfolio.h  Stock.cpp  Stock.h
src/network/: StockDataFetcher.cpp  StockDataFetcher.h
src/utils/: envparser.cpp  envparser.h
